deployment/currencyconversion-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: currency-conversion
  name: currency-conversion
  namespace: default
spec:
  replicas: 1
  minReadySeconds: 45
  selector:
    matchLabels:
      app: currency-conversion
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: currency-conversion
    spec:
      containers:
        - image: amsidhmicroservice/currencyconversion:0.0.2-SNAPSHOT
#        - image: gcr.io/microservice-324508/currencyconversion:latest
          imagePullPolicy: IfNotPresent
          name: currency-conversion
          ports:
            - name: liveness-port
              containerPort: 8282
# Commented out after adding ribbon as client side load balancing. Change-1
#          env:
#            - name: CURRENCY_EXCHANGE_URI
#              value: currency-exchange
          resources:
            requests:
              memory: 512Mi
            limits:
              memory: 1024Mi
          readinessProbe:
            httpGet:
              path: /
              port: liveness-port
            failureThreshold: 5
            periodSeconds: 10
            initialDelaySeconds: 60
          livenessProbe:
            httpGet:
              path: /
              port: liveness-port
            failureThreshold: 5
            periodSeconds: 10
            initialDelaySeconds: 60
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: currency-conversion
  name: currency-conversion
spec:
  type: NodePort
  ports:
    - name: "8282"
      port: 8282
      targetPort: 8282
      protocol: TCP
  selector:
    app: currency-conversion
  sessionAffinity: None
