deployment/currencyconversion-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: currencyconversion
  name: currencyconversion
spec:
  type: LoadBalancer
  ports:
  - name: "8282"
    port: 8282
    targetPort: 8282
  selector:
    io.kompose.service: currencyconversion
