deployment/currencyexchange-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: currency-exchange
  name: currency-exchange
spec:
  replicas: 1
  minReadySeconds: 45
  selector:
    matchLabels:
      app: currency-exchange
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: currency-exchange
    spec:
      containers:
        - image: amsidhmicroservice/currencyexchange:0.0.1-SNAPSHOT
#        - image: gcr.io/microservice-324508/currencyexchange:latest
          imagePullPolicy: IfNotPresent
          name: currency-exchange
          ports:
            - name: liveness-port
              containerPort: 8181
          resources:
            requests:
              memory: 512Mi
            limits:
              memory: 1024Mi
          readinessProbe:
            httpGet:
              path: /
              port: liveness-port
            failureThreshold: 5
            periodSeconds: 10
            initialDelaySeconds: 60
          livenessProbe:
            httpGet:
              path: /
              port: liveness-port
            failureThreshold: 5
            periodSeconds: 10
            initialDelaySeconds: 60
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: currency-exchange
  name: currency-exchange
  namespace: default
spec:
  ports:
    - name: http
      port: 8181
  selector:
    app: currency-exchange
