deployment/currencyexchange-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: currencyexchange
  name: currencyexchange
spec:
  type: ClusterIP
  ports:
  - name: "8181"
    port: 8181
    targetPort: 8181
  selector:
    io.kompose.service: currencyexchange
