deployment/currency-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: currency-service-ingress
  name: currency-service-ingress
  annotations:
    nginx.ingress.kubernates.io/rewrite-target: /
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /currency-exchange/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: currency-exchange
                port:
                  number: 8181

          - path: /currency-conversion/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: currency-conversion
                port:
                  number: 8282
