deployment/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: currency-service-virutal-service
spec:
  hosts:
    - "*"
  gateways:
    - istio-gateway
  http:
    - match:
        - uri:
            prefix: /currency-conversion
        - uri:
            prefix: /
      route:
        - destination:
            host: currency-conversion
            port:
              number: 8282
    - match:
        - uri:
            prefix: /currency-exchange
      route:
        - destination:
            host: currency-exchange
            port:
              number: 8181
